# auto-trade

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  demo_greeks_calculator.py  demo_market_state_detector.py  demo_optimized_trading_system.py  demo_qqq_options.py  demo_real_api_greeks.py  demo_real_api_risk_manager.py  demo_real_time_data.py  demo_real_time_data_mvp_test.py  demo_technical_indicators.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  tatus  test_minimal_functionality.py  test_real_api_risk_manager.py  test_real_time_greeks_integration.py
.lingma/rules/: project_rule.md
config/: private_key.pem  tiger_openapi_config.properties
demos/: client_config.py  push_client_demo.py  push_client_stomp_demo.py  quote_client_demo.py  trade_client_demo.py
docs/: 0DTE期权高频交易策略设计文档.md  QQQ末日期权最优策略分析.md  api_reference.md  代码优化总结.md  开发规范与最佳实践.md  需求规格说明书.md  项目实施计划.md  风险评估与免责声明.md
docs/architecture/: class_diagram.puml  project_structure.md  system_architecture.puml
docs/sequence_diagrams/: README.md  REQ-ANOM-001_anomaly_detection.puml  REQ-ANOM-002_time_windows.puml  REQ-BIZ-001_dual_track_trading.puml  REQ-BIZ-002_symbol_management.puml  REQ-COMP-001_compliance.puml  REQ-COMP-002_internal_governance.puml  REQ-EXEC-001_exit_decision.puml  REQ-EXEC-002_hft_execution.puml  REQ-MON-001_monitoring_system.puml  REQ-MON-002_kpi_system.puml  REQ-OPT-001_option_screening.puml  REQ-OPT-002_greeks_management.puml  REQ-RISK-001_multi_layer_risk.puml  REQ-RISK-002_risk_limits.puml  REQ-SYS-001_core_modules.puml  REQ-SYS-002_calculation_engines.puml  REQ-TECH-001_technical_indicators.puml  REQ-TECH-002_signal_confirmation.puml  REQ-TEST-001_simulation_testing.puml  REQ-TEST-002_validation_standards.puml  dual_track_trading_sequence.puml
notebooks/: 老虎证券真实交易API演示.ipynb
src/api/: broker_tiger_api.py
src/application/: __init__.py  system_controller.py  trading_orchestrator.py
src/config/: __init__.py  configuration_manager.py  constants_definition.py  option_config.py  trading_config.py
src/domain/: __init__.py  market_analysis_service.py  option_trading_service.py  risk_management_service.py
src/engines/: __init__.py  greeks_calculation_engine.py  risk_calculation_engine.py  technical_analysis_engine.py
src/infrastructure/: __init__.py  cache_repository.py  data_access_layer.py  external_api_adapter.py
src/models/: __init__.py  option_models.py  trading_models.py
src/presentation/: __init__.py  command_line_interface.py  main_application.py
src/services/: market_analyzer.py  market_state_detector.py  option_analyzer.py  risk_manager.py
src/utils/: __init__.py  api_optimizer.py  api_rate_limiter.py  cache_manager.py  data_validator.py  exception_handler.py  greeks_calculator.py  logger_config.py  logging_utility.py  option_calculator.py  parallel_api_manager.py  security_utility.py  technical_indicators.py  validation_utility.py
test/api/: test_broker_tiger_api.py  test_qqq_options.py
test/application/: __init__.py
test/config/: __init__.py
test/domain/: __init__.py
test/engines/: __init__.py
test/infrastructure/: __init__.py
test/integration/: __init__.py  test_greeks_real_integration.py  test_risk_management_real_integration.py
test/models/: __init__.py
test/presentation/: __init__.py
test/services/: test_market_state_detector.py  (+1 more)
(+3 files in other folders)
